--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_localizations:
+    sdk: flutter
+
+  intl: ^0.20.2
+  provider: ^6.0.5
   shimmer: ^3.0.0
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,7 +61,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
